--- a/d3faces-showcase/src/main/webapp/WEB-INF/topbar.xhtml
+++ b/d3faces-showcase/src/main/webapp/WEB-INF/topbar.xhtml
@@ -5,7 +5,7 @@
     xmlns:p="primefaces"
     xmlns:ui="jakarta.faces.facelets">
 
-    <p:link outcome="/index" value="D3Faces Showcase">
+    <p:link outcome="/index">
         <p:graphicImage name="images/logo.svg" library="demo" width="113" />
     </p:link>
 
